crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.LineStrips2D.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
strips: [[]]
radii: [-1.5]
colors: [3161148927]
labels: []
show_labels: [true]
draw_order: [20.0]
class_ids: [0]
